--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 <body>
   <h1>Selecciona un proyecto</h1>
 
-  <a href="cuadrado/dist/src/index.html" target="_blank" rel="noopener noreferrer">Proyecto: Cuadrado</a>
-  <a href="CUERRE/dist/src/index.html" target="_blank" rel="noopener noreferrer">Proyecto: Cierre</a>
-  <a href="FINAL/dist/src/index.html" target="_blank" rel="noopener noreferrer">Proyecto: Final</a>
-  <a href="tareabarras/barrasclon/graphics/dist/src/index.html" target="_blank" rel="noopener noreferrer">Proyecto: Tarea Barras</a>
+  <a href="cuadrado/dist/src/main.html" target="_blank" rel="noopener noreferrer">Proyecto: Cuadrado</a>
+  <a href="CUERRE/dist/src/main.html" target="_blank" rel="noopener noreferrer">Proyecto: Cierre</a>
+  <a href="FINAL/dist/src/main.html" target="_blank" rel="noopener noreferrer">Proyecto: Final</a>
+  <a href="tareabarras/barrasclon/graphics/dist/src/main.html" target="_blank" rel="noopener noreferrer">Proyecto: Tarea Barras</a>
 
 </body>
 </html>
