--- a/index.html
+++ b/index.html
@@ -1,43 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Menú de proyectos</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      text-align: center;
-      padding-top: 60px;
-    }
-    h1 {
-      color: #333;
-      margin-bottom: 40px;
-    }
-    a {
-      display: inline-block;
-      margin: 15px 20px;
-      padding: 15px 25px;
-      font-size: 1.2em;
-      color: white;
-      background-color: #007bff;
-      border-radius: 8px;
-      text-decoration: none;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
-      transition: background-color 0.3s ease;
-    }
-    a:hover {
-      background-color: #0056b3;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Selecciona una página</title>
+<style>
+body {
+font-family: Arial, sans-serif;
+text-align: center;
+      margin-top: 50px;
+}
+a {
+      display: block;
+      margin: 10px;
+      font-size: 1.5em;
+text-decoration: none;
+      color: #007bff;
+}
+a:hover {
+      text-decoration: underline;
+}
+</style>
 </head>
 <body>
-  <h1>Selecciona un proyecto</h1>
-
-  <a href="cuadrado/dist/src/main.html" target="_blank" rel="noopener noreferrer">Proyecto: Cuadrado</a>
-  <a href="CUERRE/dist/src/main.html" target="_blank" rel="noopener noreferrer">Proyecto: Cierre</a>
-  <a href="FINAL/dist/src/main.html" target="_blank" rel="noopener noreferrer">Proyecto: Final</a>
-  <a href="tareabarras/barrasclon/graphics/dist/src/main.html" target="_blank" rel="noopener noreferrer">Proyecto: Tarea Barras</a>
-
+  <h1>Selecciona una sección</h1>
+  <a href="CUERRE/index.html">QR</a>
+  <a href="FINAL/index.html">3D</a>
+  <a href="cuadrado/index.html">cuadrado</a>
+  <a href="tareabarras/barrasclon/graphics/index.html">barras</a>
 </body>
 </html>
